# SmalletCLI

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  lib.rs  location.rs  workspace.rs
src/subcommands/: init.rs
